Bug 287490 - Muon closes while installation
Summary: Muon closes while installation
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-24 20:15 UTC by Alexis
Modified: 2012-02-12 03:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexis 2011-11-24 20:15:52 UTC
Application: muon (1.2.1 "Caustic Carrionite")
KDE Platform Version: 4.7.2 (4.7.2) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.1.0.alexis-2 i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:

I pressed ctrl+c while Muon was installing chromium-browser, and later, Muon crashes.

-- Backtrace:
Application: Gestor de paquetes Muon (muon), signal: Segmentation fault
[Current thread is 1 (Thread 0xb47cf710 (LWP 20741))]

Thread 2 (Thread 0xb1ec7b70 (LWP 20744)):
#0  0xb5348d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb6da87d5 in do_gettime (frac=0xb1ec7030, sec=0xb1ec7028) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb6e7b4b6 in QTimerInfoList::updateCurrentTime (this=0xb1501934) at kernel/qeventdispatcher_unix.cpp:339
#4  0xb6e7b80a in QTimerInfoList::timerWait (this=0xb1501934, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb6e7a053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb1ec713c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb6e7a0ed in timerSourcePrepare (source=0xb1501900, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb52951c2 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb52959cf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0xb5295c21 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0xb6e7ab37 in QEventDispatcherGlib::processEvents (this=0x8724780, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb6e4b1dd in QEventLoop::processEvents (this=0xb1ec72b0, flags=...) at kernel/qeventloop.cpp:149
#12 0xb6e4b421 in QEventLoop::exec (this=0xb1ec72b0, flags=...) at kernel/qeventloop.cpp:201
#13 0xb6d4e90b in QThread::exec (this=0x87ef888) at thread/qthread.cpp:498
#14 0xb6e2be2d in QInotifyFileSystemWatcherEngine::run (this=0x87ef888) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb6d517b3 in QThreadPrivate::start (arg=0x87ef888) at thread/qthread_unix.cpp:331
#16 0xb5362d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0xb608a0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb47cf710 (LWP 20741)):
[KCrash Handler]
#7  ref (this=0x2e8) at /usr/include/qt4/QtCore/qatomic_i386.h:120
#8  QString (other=..., this=0xbf8c3118) at /usr/include/qt4/QtCore/qstring.h:729
#9  PackageDetails (this=0xbf8c3118) at /build/buildd/muon-1.2.1/libmuon/DownloadModel/DownloadModel.h:27
#10 DownloadModel::data (this=0x8ef71e0, index=..., role=0) at /build/buildd/muon-1.2.1/libmuon/DownloadModel/DownloadModel.cpp:33
#11 0xb690f522 in QAbstractItemView::keyPressEvent (this=0x8fbc730, event=0xbf8c3974) at itemviews/qabstractitemview.cpp:2221
#12 0xb695cb75 in QTreeView::keyPressEvent (this=0x8fbc730, event=0xbf8c3974) at itemviews/qtreeview.cpp:1939
#13 0xb63d203c in QWidget::event (this=0x8fbc730, event=0xbf8c3974) at kernel/qwidget.cpp:8330
#14 0xb67d7235 in QFrame::event (this=0x8fbc730, e=0xbf8c3974) at widgets/qframe.cpp:557
#15 0xb686b304 in QAbstractScrollArea::event (this=0x8fbc730, e=0xbf8c3974) at widgets/qabstractscrollarea.cpp:996
#16 0xb690e14c in QAbstractItemView::event (this=0x8fbc730, event=0xbf8c3974) at itemviews/qabstractitemview.cpp:1564
#17 0xb6377d54 in notify_helper (e=0xbf8c3974, receiver=0x8fbc730, this=0x8320a50) at kernel/qapplication.cpp:4486
#18 QApplicationPrivate::notify_helper (this=0x8320a50, receiver=0x8fbc730, e=0xbf8c3974) at kernel/qapplication.cpp:4458
#19 0xb637dc07 in QApplication::notify (this=0x8fbc730, receiver=0x8fbc730, e=0xbf8c3974) at kernel/qapplication.cpp:3945
#20 0xb7437681 in KApplication::notify (this=0xbf8c42fc, receiver=0x8fbc730, event=0xbf8c3974) at ../../kdeui/kernel/kapplication.cpp:311
#21 0xb6e4c19e in QCoreApplication::notifyInternal (this=0xbf8c42fc, receiver=0x8fbc730, event=0xbf8c3974) at kernel/qcoreapplication.cpp:787
#22 0xb6375b6d in sendSpontaneousEvent (event=0xbf8c3974, receiver=0x8fbc730) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#23 qt_sendSpontaneousEvent (receiver=0x8fbc730, event=0xbf8c3974) at kernel/qapplication.cpp:5480
#24 0xb642b8b1 in QKeyMapper::sendKeyEvent (keyWidget=0x8fbc730, grab=false, type=QEvent::KeyPress, code=67, modifiers=..., text=..., autorepeat=false, count=-1081329292, nativeScanCode=151334560, nativeVirtualKey=151334560, nativeModifiers=151334560) at kernel/qkeymapper_x11.cpp:1866
#25 0xb642bd55 in QKeyMapperPrivate::translateKeyEvent (this=0x8348460, keyWidget=0x8fbc730, event=0xbf8c3f5c, grab=false) at kernel/qkeymapper_x11.cpp:1836
#26 0xb64039f5 in QApplication::x11ProcessEvent (this=0xbf8c42fc, event=0xbf8c3f5c) at kernel/qapplication_x11.cpp:3583
#27 0xb643024c in x11EventSourceDispatch (s=0x83200c0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0xb529573a in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#29 0xb5295b45 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#30 0xb5295c21 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#31 0xb6e7aada in QEventDispatcherGlib::processEvents (this=0x8318a60, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#32 0xb642fe3a in QGuiEventDispatcherGlib::processEvents (this=0x8318a60, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0xb6e4b1dd in QEventLoop::processEvents (this=0xbf8c4254, flags=...) at kernel/qeventloop.cpp:149
#34 0xb6e4b421 in QEventLoop::exec (this=0xbf8c4254, flags=...) at kernel/qeventloop.cpp:201
#35 0xb6e5019d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#36 0xb63758f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#37 0x080508be in main (argc=) at /build/buildd/muon-1.2.1/muon/main.cpp:56

Reported using DrKonqi
Comment 1 Jonathan Thomas 2012-02-12 03:02:00 UTC
Git commit 2837a2bdac6937c7de7422818ddc2aad44bd33db by Jonathan Thomas.
Committed on 12/02/2012 at 04:01.
Pushed by jmthomas into branch 'master'.

Don't crash if told to grab data for a non-existant download item.
FIXED-IN:1.3.0

M  +4    -0    muon/DownloadModel/DownloadModel.cpp

http://commits.kde.org/muon/2837a2bdac6937c7de7422818ddc2aad44bd33db