Don't crash if told to grab data for a non-existant download item.

BUG:287490
FIXED-IN:1.3.0